Fix dungeon link flashing being too wide.

--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -34,5 +34,7 @@ main .#{$about} {
 
 		padding: 0.2% 2%;
 		background-color: lighten(red, 15%);
+
+		display: inline;
 	}
 }
